--- a/wp-content/themes/understrap-child/sass/theme/modules/header.scss
+++ b/wp-content/themes/understrap-child/sass/theme/modules/header.scss
@@ -44,7 +44,11 @@
 	}
 }
 
+.navbar {
+	width: 100%;
+}
 .navbar-nav {
+	width: 100%;
 	.nav-link {
 		color: $black;
 		text-align: center;
@@ -52,6 +56,8 @@
 		transform: scale(1);
 		text-transform: uppercase;
 		width: 100%;
+		text-align: center;
+		display: block;
 		&:hover {
 			transition: all .25s ease-in-out;
 			transform: scale(1.2);
